--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Revision history for Perl module Math::MPFR
 4.25
  - work on fixing bugs in nvtoa() for DoubleDoubles. (Use _mpfrtoa instead of _nvtoa.)
  - Fix typos in pod. Thanks Vincent Lefevre - https://github.com/sisyphus/math-mpfr/pull/6.
+ - Alter the Makefile.PL to accommodate sisyphus' MSVC-built perls.
 
 4.24
  - add nvtoa_test() to facilitate validation of results returned by nvtoa() and mpfrtoa().
