--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,8 @@ Revision history for Perl module Math::MPFR
 4.28
  - Correct the testing for the presence of the Windows subnormal bug in t/nvtoa2.t.
  - Small tweaks to Rmpfr_cmp_IV and Rmpfr_set_IV.
+ - Avoid monitoring PL_markstack_ptr in MPFR.xs - except for (TODO) decimalize() and
+   doubletoa().
 
 4.27
  - Remove stray '}' from Rmpfr_add_z
@@ -400,7 +402,7 @@ Revision history for Perl module Math::MPFR
  - Add _Decimal64-mpfr_t conversion
 
 3.14
- - Fix pod. (The '±' symbol was causing pod.t failures.) Also took care of
+ - Fix pod. (The ' ' symbol was causing pod.t failures.) Also took care of
    some other typos/oversights in the documentation.
 
 3.13
