--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ Revision history for Perl module Math::MPFR
  - Correct the testing for the presence of the Windows subnormal bug in t/nvtoa2.t.
  - Small tweaks to Rmpfr_cmp_IV and Rmpfr_set_IV.
  - Avoid monitoring PL_markstack_ptr in MPFR.xs.
+ - In Rmpfr_deref2, replace 1st arg of '0' in mpfr_get_str() call with 'NULL'.
 
 4.27
  - Remove stray '}' from Rmpfr_add_z
