--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 Revision history for Perl module Math::MPFR
 
 4.29
+  - Add new (in MPFR-4.3.0) function Rmpfr_compound and new test script t/compound.t.
   - In math_mpfr_include.h, re-specify MATH_MPFR_NV_MAX in hex, as 32-bit Windows
     perl-5.39.7 (nvtype of 'double') was apparently unable to evaluate the decimal
     form correctly.
