--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1086,11 +1086,10 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     $rop = exp($op2 * log($op1)) rounded to the direction $rnd
     with the precision of $rop.
 
-
-   $inex = Rmpfr_compound_si($rop, $op, $si, $rnd);
-    $rop = ($op + 1) ** $si, rounded according to $rnd, to the
+   $inex = Rmpfr_compound ($rop, $op1, $op2, $rnd); # New in 4.3.0
+   $inex = Rmpfr_compound_si($rop, $op1, $si, $rnd); # New in 4.2.0
+    $rop = ($op1 + 1) ** 3rd_arg, rounded according to $rnd, to the
     precision of $rop.
-    When $si is 0 and $op is NaN or is >= -1, $rop is set to 1.
 
    $inex = Rmpfr_neg($rop, $op, $rnd);
     Set $rop to -$op rounded in the direction $rnd. Just
