MPFR.pod - expand Rmpfr_compound and Rmpfr_compound_si docs

--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1089,7 +1089,14 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
    $inex = Rmpfr_compound ($rop, $op1, $op2, $rnd); # New in 4.3.0
    $inex = Rmpfr_compound_si($rop, $op1, $si, $rnd); # New in 4.2.0
     $rop = ($op1 + 1) ** 3rd_arg, rounded according to $rnd, to the
-    precision of $rop.
+    precision of $rop. However, there are special cases:
+     $rop is set to NaN when $op1 < -1;
+     $rop is set to 1 when $op1 is NaN and $op2 is 0;
+     $rop is set to +Inf when $op1 is -1 and $op2 < 0;
+     $rop is set to +0   when $op1 is -1 and $op2 > 0.
+     The other special cases follow the 'Rmpfr_pow' rules on
+     (1 + OP1, OP2).
+
 
    $inex = Rmpfr_neg($rop, $op, $rnd);
     Set $rop to -$op rounded in the direction $rnd. Just
