Simplify the testing done in t/LongDouble.t

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 Revision history for Perl module Math::MPFR
 
 4.31
+  - Reduce the testing done in t/LongDouble.t to simply test the correctness of
+    Rmpfr_set_LD() and Rmpfr_get_LD().
 
 4.29
   - Add new (in MPFR-4.3.0) function Rmpfr_compound and new test script t/compound.t.
