Add new functions log_2, log_10, sind, cosd, tand and tangent

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Revision history for Perl module Math::MPFR
 4.31
   - Reduce the testing done in t/LongDouble.t to simply test the correctness of
     Rmpfr_set_LD() and Rmpfr_get_LD().
+  - Add log_2(),log_10(), sind(), cosd(), tand() and tangent() functions.
 
 4.29
   - Add new (in MPFR-4.3.0) function Rmpfr_compound and new test script t/compound.t.
