--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,10 @@ Revision history for Perl module Math::MPFR
   - Reduce the testing done in t/LongDouble.t to simply test the correctness of
     Rmpfr_set_LD() and Rmpfr_get_LD().
   - Add log_2(),log_10(), sind(), cosd(), tand() and tangent() functions.
+  - Optionally allow (via setting of $Math::MPFR::PERL_INFNAN) infs and nans to be
+    stringified by nv2a() to the same as perl provides. Previously they have been
+    stringified by nv2a() strictly as "Inf", "-Inf" and "Nan" - which could differ
+    from perl's presentation. See "DISPLAYING INFS AND NANS" in the documentation.
 
 4.29
   - Add new (in MPFR-4.3.0) function Rmpfr_compound and new test script t/compound.t.
