--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 Revision history for Perl module Math::MPFR
 
 4.33
+  - Remove poorly documented (and questionable) option of providing a second
+    argument to mpfrtoa().
 
 4.32
   - Workaround a bug in some Win32 builds.
