--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1913,22 +1913,18 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
             With double-double NVs, nvtoa() currently requires
             mpfr-4.0.0 or later.
 
-   $str = mpfrtoa($op, $uv); # $uv is optional (new in 4.24), and will
-                             # be set to zero if not provided.
+   $str = mpfrtoa($op);
     As for nvtoa(), except that mpfrtoa() instead takes a Math::MPFR
     object as its argument.
     Sets $str to the value of $op.
     $str will appear in standard decimal format, containing the
     *minimum* number of digits such that the condition ($str == $op)
     is true.
-    If provided, $uv sets the minimum precision below which the value
-    will be deemed subnormal. For example, if $uv is given as 53, then
-    any Math::MPFR object ($op) with precision less than 53 bits will
-    be treated as subnormal. (This can have an effect on the no. of
-    significant mantissa digits returned.)
-    If $uv is not provided, it is assigned a value of 0 - ie no
-    Math::MPFR objects will be treated as subnormal (because
-    precision is never less than 0).
+    A second (optional) arg that became available with Math-MPFR-4.24
+    has been removed in Math-MPFR-4.33 because I don't think it ever
+    served a useful purpose. It will be returned if requested, or if
+    I ever understand that it did, in fact, serve some useful purpose.
+    (I doubt that anyone was using it ... but let's see ... ;-)
 
    $str = anytoa($op [, $bits]);
     For example, you want to know what nvtoa(sqrt 3) would return
