--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@ Revision history for Perl module Math::MPFR
 
 4.33
   - Remove the option of providing a second argument to anytoa().
+  - Add new (in MPFR-4.3.0) function Rmpfr_trigamma and new test script t/trigamma.t
 
 4.32
   - Workaround a bug in some Win32 builds.
