--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 Revision history for Perl module Math::MPFR
 
 4.35
+  - Fix https://rt.cpan.org/Public/Bug/Display.html?id=158699 (introduced in 4.25).
+    Thanks SREZIC.
 
 4.34
   - Fix http://www.cpantesters.org/cpan/report/b5e0d3db-6deb-1014-9c2b-9eec45d75318
