--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 Revision history for Perl module Math::MPFR
 
 4.35
+  - Accommodate overloading of Math::GMP objects.
   - Alter overloading of left shift and right shift operations to be compatible
     with perl and Math::BigFloat
   - Fix https://rt.cpan.org/Public/Bug/Display.html?id=158699 (introduced in 4.25).
